--- a/dataverse-webapp/src/main/webapp/file-configure-popup-fragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/file-configure-popup-fragment.xhtml
@@ -12,7 +12,7 @@
             <p:commandLink type="button" styleClass="btn btn-default"
                 action="#{configureFragmentBean.configureExternalAlert()}" 
                 value="#{bundle['continue']}" 
-                onclick="PF('configureToolPopup').hide();window.open('#{configureFragmentBean.toolUrlWithQueryParams}', '_blank')"
+                onclick="PF('configureToolPopup').hide();window.open('#{configureFragmentBean.getToolUrlWithQueryParams()}', '_blank')"
                 update=":messagePanel">
             </p:commandLink>
             <button type="button" class="btn btn-default"
