--- a/dataverse-webapp/src/main/webapp/file.xhtml
+++ b/dataverse-webapp/src/main/webapp/file.xhtml
@@ -197,8 +197,8 @@
                             
                                 <div id="file-title-block" class="col-xs-12">
                                     <!-- Restricted File Icon -->
-                                    <span class="glyphicon glyphicon-lock text-danger" jsf:rendered="#{FilePage.fileMetadata.termsOfUse.termsOfUseType eq termsOfUseTypeEnum.RESTRICTED and !(fileDownloadHelper.canDownloadFile(FilePage.fileMetadata))}" />
-                                    <span class="icon-unlock text-success" jsf:rendered="#{FilePage.fileMetadata.termsOfUse.termsOfUseType eq termsOfUseTypeEnum.RESTRICTED  and fileDownloadHelper.canDownloadFile(FilePage.fileMetadata) }" />
+                                    <span class="glyphicon glyphicon-lock text-danger" jsf:rendered="#{FilePage.fileMetadata.termsOfUse.termsOfUseType eq termsOfUseTypeEnum.RESTRICTED and !(fileDownloadHelper.canUserDownloadFile(FilePage.fileMetadata))}" />
+                                    <span class="icon-unlock text-success" jsf:rendered="#{FilePage.fileMetadata.termsOfUse.termsOfUseType eq termsOfUseTypeEnum.RESTRICTED  and fileDownloadHelper.canUserDownloadFile(FilePage.fileMetadata) }" />
 
                                     <!-- Title/Label -->
                                     <h:outputText value="#{FilePage.fileMetadata.label}" styleClass="file-title-label"/>
