--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -949,10 +949,10 @@
                     <p class="text-warning">
                         <span class="glyphicon glyphicon-warning-sign"/> #{bundle['dataset.rejectMessage']}
                     </p>
-                    <ui:remove>
+<!--                    <ui:remove>-->
                         <!--FIXME update for new comments table -->
-                        <p:inputTextarea id="returnReason" rows="3" value="#{DatasetPage.workingVersion.returnReason}"
-                                         maxlength="200" widgetVar="returnReason"
+                        <p:inputTextarea id="returnReason" rows="3" value="#{DatasetPage.returnReason}"
+                                         maxlength="255" widgetVar="returnReason"
                                          cols="70" counter="display" counterTemplate="{0} characters remaining."
                                          autoResize="false"/>
                         <p>
@@ -960,14 +960,14 @@
                         </p>
                         <p:watermark for="returnReason" value="#{bundle['dataset.rejectWatermark']}"
                                      id="returnReasonwatermark"/>
-                    </ui:remove>
+<!--                    </ui:remove>-->
 
                     <div class="button-block">
-                        <p:commandButton value="#{bundle.continue}" onclick="PF('sendBackToContributor').hide()"
-                                         action="#{DatasetPage.sendBackToContributor}"/>
-                        <ui:remove>
+<!--                        <p:commandButton value="#{bundle.continue}" onclick="PF('sendBackToContributor').hide()"-->
+<!--                                         action="#{DatasetPage.sendBackToContributor}"/>-->
+<!--                        <ui:remove>-->
                             <p:commandButton value="#{bundle.continue}" onclick="testReturnReason();"/>
-                        </ui:remove>
+<!--                        </ui:remove>-->
                         <p:commandButton value="#{bundle.cancel}"
                                          onclick="PF('sendBackToContributor').hide();"
                                          type="button"/>
