added test for no files exception

--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -837,7 +837,7 @@
                         </p>
                         <div class="button-block">
                             <p:commandButton value="#{bundle.ok}"
-                                             onclick="PF('noFilesInDataset').hide();"
+                                             onclick="PF('inreview').hide();"
                                              type="button"/>
                         </div>
                     </p:outputPanel>
