reverted menu removal.

--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -687,6 +687,17 @@
                                         <p:selectOneMenu styleClass="facet-category-default"
                                                          disabled="#{false}"
                                                          validator="#{DataverseUserPage.validatePreferredNotificationsLanguage}"
+                                                         value="#{DataverseUserPage.preferredNotificationsLanguage}"
+                                                         rendered="#{DataverseUserPage.editMode ne 'CREATE'}"
+                                        >
+                                            <f:selectItems value="#{DataverseUserPage.getSupportedLanguages()}"
+                                                           var="language"
+                                                           itemLabel="#{DataverseUserPage.getLocalizedDisplayNameForLanguage(language)}"
+                                                           itemValue="#{language}"/>
+                                        </p:selectOneMenu>
+                                        <p:selectOneMenu styleClass="facet-category-default"
+                                                         disabled="#{false}"
+                                                         validator="#{DataverseUserPage.validatePreferredNotificationsLanguage}"
                                                          hideNoSelectionOption="true"
                                                          value="#{DataverseUserPage.preferredNotificationsLanguage}"
                                                          rendered="#{DataverseUserPage.editMode eq 'CREATE'}"
