Closes #501: fixed null value in preferred notifications language

--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -700,11 +700,13 @@
                                                          validator="#{DataverseUserPage.validatePreferredNotificationsLanguage}"
                                                          hideNoSelectionOption="true"
                                                          rendered="#{DataverseUserPage.editMode eq 'CREATE'}"
+                                                         value="#{DataverseUserPage.preferredNotificationsLanguage}"
+                                                         required="#{true}"
                                         >
                                             <f:selectItem
                                                     itemLabel="#{bundle['user.notificationsLanguage.selectItem']}"
                                                     noSelectionOption="true"
-                                                    itemValue="#{null}"
+                                                    itemValue=""
                                                     itemDisabled="true"
                                                     aria-hidden="true"
                                             />
