--- a/dataverse-webapp/src/main/webapp/shib.xhtml
+++ b/dataverse-webapp/src/main/webapp/shib.xhtml
@@ -130,11 +130,13 @@
                                                  disabled="#{false}"
                                                  validator="#{Shib.validatePreferredNotificationsLanguage}"
                                                  hideNoSelectionOption="true"
+                                                 value="#{Shib.preferredNotificationsLanguage}"
+                                                 required="#{true}"
                                 >
                                     <f:selectItem
                                             itemLabel="#{bundle['user.notificationsLanguage.selectItem']}"
                                             noSelectionOption="true"
-                                            itemValue="#{null}"
+                                            itemValue=""
                                             itemDisabled="true"
                                             aria-hidden="true"
                                     />
