--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -695,13 +695,15 @@
                                                            itemLabel="#{DataverseUserPage.getLocalizedDisplayNameForLanguage(language)}"
                                                            itemValue="#{language}"/>
                                         </p:selectOneMenu>
-                                        <p:selectOneMenu styleClass="facet-category-default"
+                                        <p:selectOneMenu id="preferredLanguageDropdown"
+                                                         styleClass="facet-category-default"
                                                          disabled="#{false}"
                                                          validator="#{DataverseUserPage.validatePreferredNotificationsLanguage}"
                                                          hideNoSelectionOption="true"
                                                          rendered="#{DataverseUserPage.editMode eq 'CREATE'}"
                                                          value="#{DataverseUserPage.preferredNotificationsLanguage}"
                                                          required="#{true}"
+                                                         requiredMessage="#{bundle['user.notificationsLanguage.requiredMessage']}"
                                         >
                                             <f:selectItem
                                                     itemLabel="#{bundle['user.notificationsLanguage.selectItem']}"
@@ -715,6 +717,7 @@
                                                            itemLabel="#{DataverseUserPage.getLocalizedDisplayNameForLanguage(language)}"
                                                            itemValue="#{language}"/>
                                         </p:selectOneMenu>
+                                        <p:message for="preferredLanguageDropdown" display="text" />
                                     </div>
                                 </div>
                                 <ui:fragment rendered="#{DataverseUserPage.editMode == 'CREATE'}">
