--- a/dataverse-webapp/src/main/webapp/oauth2/firstLogin.xhtml
+++ b/dataverse-webapp/src/main/webapp/oauth2/firstLogin.xhtml
@@ -139,7 +139,8 @@
                                           data-toggle="tooltip" data-placement="auto right" data-original-title="#{bundle['user.notificationsLanguage.tip']}"></span>
                                 </label>
                                 <div class="col-sm-4">
-                                    <p:selectOneMenu styleClass="facet-category-default"
+                                    <p:selectOneMenu id="preferredLanguageDropdown"
+                                                     styleClass="facet-category-default"
                                                      disabled="#{false}"
                                                      validator="#{OAuth2FirstLoginPage.validatePreferredNotificationsLanguage}"
                                                      hideNoSelectionOption="true"
@@ -158,6 +159,7 @@
                                                        itemLabel="#{OAuth2FirstLoginPage.getLocalizedDisplayNameForLanguage(language)}"
                                                        itemValue="#{language}"/>
                                     </p:selectOneMenu>
+                                    <p:message for="preferredLanguageDropdown" display="text" />
                                 </div>
                             </div>
                             <ui:include src="../termsofuse.xhtml"/>
