--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -7,6 +7,7 @@
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:o="http://omnifaces.org/ui"
       xmlns:dv="http://dataverse.org/facelets" xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:iqbs="http://xmlns.jcp.org/jsf/composite/iqbs"
 >
 
 <!--@elvariable id="dataset" type="edu.harvard.iq.dataverse.persistence.dataset.Dataset"-->
@@ -142,7 +143,7 @@
                                     <!-- END: Publish Buttons -->
 
                                     <!-- Return to Author Button -->
-                                    <p:commandLink type="button" styleClass="btn btn-default btn-access #{(DatasetPage.locked and !DatasetPage.dataset.latestVersion.inReview)                                                                                                           
+                                    <p:commandLink id="returnForModificationButton" type="button" styleClass="btn btn-default btn-access #{(DatasetPage.locked and !DatasetPage.dataset.latestVersion.inReview)
                                                                                                           ? 'disabled' : ''}"
                                                    onclick="PF('sendBackToContributor').show()"
                                                    rendered="#{DatasetPage.dataset.latestVersion.versionState=='DRAFT' and DatasetPage.dataset.latestVersion.inReview
@@ -947,33 +948,40 @@
                 </p:dialog>
 
                 <p:dialog header="#{bundle['dataset.rejectBtn']}" widgetVar="sendBackToContributor" modal="true">
-                    <p>
-                        <h:outputFormat id="textBoxName" value="#{bundle['dataset.reject.messageBox.label']}" escape="false"/>
-                    </p>
-                    <p:inputTextarea id="returnReason"
-                                     rows="3"
-                                     value="#{DatasetPage.returnToAuthorReason}"
-                                     maxlength="255"
-                                     widgetVar="returnReason"
-                                     cols="70"
-                                     counter="display"
-                                     counterTemplate="{0} characters remaining."
-                                     autoResize="false"
-                    >
-                        <p:ajax event="keyup" delay="100" global="false" update="confirmSentForModificationButton" />
-                    </p:inputTextarea>
-                    <p>
-                        <h:outputText id="display"/>
-                    </p>
-                    <p:watermark for="returnReason" value="#{bundle['dataset.rejectWatermark']}"
-                                 id="returnReasonwatermark"/>
-
+                    <div class="form-group">
+                        <label for="returnReasonTextArea" class="col-sm-3 control-label">#{bundle['dataset.reject.messageBox.label']}
+                            <span class="glyphicon glyphicon-asterisk text-danger" title="#{bundle.requiredField}"/>
+                        </label>
+                        <div class="col-sm-9">
+                            <p:fragment id="returnReasonFragment">
+                                <p:inputTextarea id="returnReasonTextArea"
+                                                 rows="3"
+                                                 value="#{DatasetPage.returnToAuthorReason}"
+                                                 maxlength="255"
+                                                 cols="60"
+                                                 counter="display"
+                                                 counterTemplate="#{bundle['dataset.reject.messageBox.counter']}"
+                                                 autoResize="false"
+                                                 required="#{true}"
+                                                 requiredMessage="#{bundle['dataset.reject.enterReason']}"
+                                                 styleClass="form-control"
+                                >
+                                </p:inputTextarea>
+                                <h:message for="returnReasonTextArea" styleClass="bg-danger text-danger"/>
+                                <p>
+                                    <h:outputText id="display"/>
+                                </p>
+                            </p:fragment>
+                        </div>
+                        <p:watermark for="returnReasonTextArea" value="#{bundle['dataset.rejectWatermark']}"
+                                     id="returnReasonwatermark"/>
+                    </div>
                     <div class="button-block">
-                        <p:commandButton id="confirmSentForModificationButton"
-                                         value="#{bundle.ok}"
-                                         disabled="#{empty DatasetPage.returnToAuthorReason}"
-                                         onsuccess="PF('sendBackToContributor').hide();"
-                                         action="#{DatasetPage.sendBackToContributor()}"
+                        <p:commandLink styleClass="btn btn-default btn-access"
+                                       value="#{bundle.ok}"
+                                       update="@([id$=Messages]) returnReasonFragment"
+                                       oncomplete="if (args &amp;&amp; !args.validationFailed) PF('sendBackToContributor').hide();"
+                                       actionListener="#{DatasetPage.sendBackToContributor()}"
                         />
                         <p:commandButton value="#{bundle.cancel}"
                                          onclick="PF('sendBackToContributor').hide();"
